fixed padding to bottom of contact form at 900px to prevent footer covering send button

--- a/portfolio-scss/pages.scss
+++ b/portfolio-scss/pages.scss
@@ -46,7 +46,7 @@
     z-index: 0;
 }
 
-/*contact*/
+/*connect*/
 .contact-container{
     margin: 0 auto;
     padding-top: 5vh;
@@ -78,5 +78,8 @@
    .page-content,
    .blog-content{
        padding-top: 13vh;
+   }
+   .contact-form{
+       padding: 100px;
    }
 }
